<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMovieActivity">

    <TextView
        android:id="@+id/tvTitleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_filme"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_value"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleName"/>

    <TextView
        android:id="@+id/tvTitleYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ano_de_lancamento"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_value"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleYear"/>

    <TextView
        android:id="@+id/tvTitleAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_value"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAuthor"/>
    <TextView
        android:id="@+id/tvTitleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_value"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>